force-app/main/default/objects/Policy_Holder__c/Policy_Holder__c.object-meta.xml
<CustomObject>
    <label>Policy Holder</label>
    <nameField>
        <label>Policy Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>