force-app/main/default/objects/Policy_Holder__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <defaultValue>100000</defaultValue>
    <description>Enter per Anum Income</description>
    <label>Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>