force-app/main/default/objects/Policy_Holder__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>