force-app/main/default/objects/Policy_Holder__c/fields/Ph_Id__c.field-meta.xml
<CustomField>
    <fullName>Ph_Id__c</fullName>
    <displayFormat>PHID-{0000}</displayFormat>
    <label>Ph Id</label>
    <type>AutoNumber</type>
</CustomField>